feat: разработать раздел лекций
