# src/main/resources/openapi/openapi.yaml
@@ -7,8 +7,17 @@ info:
 servers:
   - url: https://localhost:8080/api/v1
 
+components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+security:
+  - bearerAuth: []
+
 paths:
-  /course/getCoursePage:
+  /course/getCoursePage:  #Public
     $ref: './endpoints/course/get-course-page.yaml'
   /course/create:
     $ref: './endpoints/course/create-course.yaml'
@@ -22,7 +31,7 @@ paths:
   /fileSaver/get:
     $ref: './endpoints/file-saver/get.yaml'
 
-  /section/getSectionPage/{courseId}:
+  /section/getSectionPage/{courseId}: #Public
     $ref: './endpoints/section/get-section-page.yaml'
   /section/create:
     $ref: './endpoints/section/create-section.yaml'
@@ -31,7 +40,7 @@ paths:
   /section/delete:
     $ref: './endpoints/section/delete-section.yaml'
 
-  /lecture/getLecturePage/{sectionId}:
+  /lecture/getLecturePage/{sectionId}: #Public
     $ref: './endpoints/lecture/get-lecture-page.yaml'
   /lecture/create:
     $ref: './endpoints/lecture/create-lecture.yaml'
@@ -39,12 +48,14 @@ paths:
     $ref: './endpoints/lecture/update-lecture.yaml'
   /lecture/delete:
     $ref: './endpoints/lecture/delete-lecture.yaml'
-  /lecture/getLecture:
+  /lecture/getLecture/{id}:
     $ref: './endpoints/lecture/get-lecture.yaml'
 
 
-  /auth/login:
+  /auth/login: #Public
     $ref: './endpoints/auth/signIn.yaml'
+  /auth/refreshAccessToken: #Public
+    $ref: './endpoints/auth/refreshAccessToken.yaml'
 
 
 
